err/artichoke.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/artichoke'...
Compiling './lib/python3.5/site-packages/artichoke/application.py'...
***   File "./lib/python3.5/site-packages/artichoke/application.py", line 46
    except HTTPException, e:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/artichoke/controller.py'...
***   File "./lib/python3.5/site-packages/artichoke/controller.py", line 159
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/artichoke/mail_traceback.py'...
***   File "./lib/python3.5/site-packages/artichoke/mail_traceback.py", line 51
    print 'Failed to connect to SMTP'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/artichoke/server.py'...
***   File "./lib/python3.5/site-packages/artichoke/server.py", line 128
    print "Artichoke Serving on port 8080..."
                                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/artichoke/template.py'...
***   File "./lib/python3.5/site-packages/artichoke/template.py", line 100
    print [x for x in globals['__output__'] if x.__class__ != unicode]
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/artichoke-0.4.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './share'...
Listing './share/python-wheels'...
